--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -307,4 +307,11 @@ public without sharing class CommunityService {
 
         return null;
     }
+
+    public static Id getCommunityId(String name) {
+        String nameFilter = '';
+        if(name != null) nameFilter = ' WHERE Name = \'' + name + '\' ';
+
+        return Database.query('SELECT Id FROM Network' + nameFilter).get(0).Id;
+    }
 }
