--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -3,28 +3,31 @@
  */
 
 public without sharing class TaskService {
-    
-    public class TaskServiceException extends Exception{}
-    
+
+    public class TaskServiceException extends Exception {
+    }
+
     public static final String TASK_STATUS_OPEN = 'Open';
     public static final String TASK_STATUS_COMPLETED = 'Completed';
     public static final String TASK_STATUS_IN_PROGRESS = 'In Progress';
     public static final String TASK_STATUS_IGNORED = 'Ignored';
-    
+    public static final String TASK_STATUS_EXPIRED = 'Expired';
+
     public static final String TASK_PRIORITY_NORMAL = 'Normal';
     public static final String TASK_PRIORITY_CRITICAL = 'Critical';
-    
+
     public static final String TASK_VISIBILITY_OWNER = 'Owner';
-    public static final String TASK_VISIBILITY_DELEGATE = 'Delegate';
-    
+    public static final String TASK_VISIBILITY_DELEGATES = 'Delegates';
+
     public static final String TASK_TYPE_MEDICATION = 'Medication';
     public static final String TASK_TYPE_VISIT = 'Visit';
+    public static final String TASK_TYPE_SURVEY = 'Survey';
 
     public static final String TASK_CODE_COMPLETE_SURVEY = 'Complete_Survey';
     public static final String TASK_CODE_COMPLETE_YOUR_PROFILE = 'Complete_Your_Profile';
-    
+
     public static final String OPEN_TASKS_ORDER = ' ORDER BY Priority DESC, ActivityDate NULLS LAST, CreatedDate DESC';
-    
+
     public static final List<String> DEFAULT_FIELDS = new List<String>{
             'Id',
             'Status',
@@ -44,32 +47,38 @@ public without sharing class TaskService {
             'Reminder_Date__c',
             'Originator__c'
     };
-    
+
+    public static final List<String> TASK_STATUS_GROUP_EXPIRE_AVAILABLE = new List<String> {
+            TASK_STATUS_OPEN,
+            TASK_STATUS_IGNORED,
+            TASK_STATUS_IN_PROGRESS
+    };
+
     private static TaskService instance;
-    
-    public static TaskService getInstance(){
-        if(instance == null) instance = new TaskService();
+
+    public static TaskService getInstance() {
+        if (instance == null) instance = new TaskService();
         return instance;
     }
-    
+
     /*private TaskService(){
         //lock Task Service Constructor outside
     }*/
-    
-    public static void setMock(StubProvider mock){
+
+    public static void setMock(StubProvider mock) {
         instance = (TaskService) Test.createStub(TaskService.class, mock);
     }
-    
-    public List<Task> getTasksCommon(String filter){
+
+    public List<Task> getTasksCommon(String filter) {
         String ownerFilter;
-        if(!ParticipantService.getInstance().getState().isDelegate){
+        if (!ParticipantService.getInstance().getState().isDelegate) {
             ownerFilter = ' OwnerId = \'' + UserInfo.getUserId() + '\'';
         } else {
             ownerFilter = ' OwnerId = \'' + PatientDelegateService.getInstance().getParticipantUserId() + '\'';
         }
-        if(filter == null) {
+        if (filter == null) {
             filter = ownerFilter;
-        }else{
+        } else {
             filter = ownerFilter + ' AND ' + filter;
         }
         String query = 'SELECT ' + String.join(DEFAULT_FIELDS, ',') + ' FROM Task WHERE ' + filter;
@@ -78,57 +87,69 @@ public without sharing class TaskService {
         TaskTriggerHandler.processDefaultFieldValues(tasks);
         return tasks;
     }
-    
+
     public List<Task> getOpenTasks() {
         return getTasksCommon(getOpenTasksFilter() + getVisibilityFilter() + OPEN_TASKS_ORDER);
     }
 
-    public List<Task> getPreviewTasks(){
+    public List<Task> getPreviewTasks() {
         return getTasksCommon(getOpenTasksFilter() + getVisibilityFilter() + OPEN_TASKS_ORDER + ' LIMIT 5');
     }
-    
-    public Task getTask(Id taskId){
+
+    public Task getTask(Id taskId) {
         List<Task> tasks = getTasksCommon(' Id = \'' + taskId + '\' ');
-        if(tasks.size() == 0) throw new TaskServiceException('Task not found: ' + taskId);
+        if (tasks.size() == 0) throw new TaskServiceException('Task not found: ' + taskId);
         return tasks[0];
     }
-    
-    public List<Task> getCompletedTasks(){
+
+    public List<Task> getCompletedTasks() {
         return getTasksCommon(getCompletedTasksFilter() + getVisibilityFilter() + ' ORDER BY Completed_Date__c DESC');
     }
-    
-    public void ignoreTask(Id taskId){
+
+    public void ignoreTask(Id taskId) {
         Task task = getTask(taskId);
         task.Status = TASK_STATUS_IGNORED;
         task.Completed_Date__c = Datetime.now();
         update task;
     }
-    
-    public void completeTask(Id taskId){
+
+    public void completeTask(Id taskId) {
         Task task = getTask(taskId);
         completeTask(task);
         update task;
     }
-    
-    public void completeTask(Task task){
+
+    public void completeTask(Task task) {
         task.Status = TASK_STATUS_COMPLETED;
         task.Completed_Date__c = Datetime.now();
     }
 
-    public Task createCompleteSurveyTask(Id ownerId, Id participantContactId, Id ctpId) {
-        return new Task(
+    public Task createCompleteSurveyTask(Id ownerId, Participant_Survey__c ps) {
+        String subject = Label.Task_Subject_Complete_Survey.replace('##SurveyName', ps.Survey__r.Name);
+
+        Task task = new Task(
                 OwnerId = ownerId,
-                Subject = TaskService.TASK_CODE_COMPLETE_SURVEY,
-                Task_Code__c = TaskService.TASK_CODE_COMPLETE_SURVEY,
+                Subject = subject,
+                Priority = TaskService.TASK_PRIORITY_CRITICAL,
+                Start_Date__c = ps.Show_Date__c,
                 Status = TASK_STATUS_OPEN,
-                Priority = TASK_PRIORITY_CRITICAL,
-                WhoId = participantContactId,
-                Visible_For__c = TASK_VISIBILITY_OWNER,
-                WhatId = ctpId
+                Task_Code__c = TASK_CODE_COMPLETE_SURVEY,
+                Reminder_Date__c = ps.Show_Date__c,
+                Task_Type__c = TASK_TYPE_SURVEY,
+                WhoId = ps.Participant_Contact__c,
+                WhatId = ps.Id
+
         );
+        if (ps.Expiration_Date__c != null) task.ActivityDate = ps.Expiration_Date__c;
+
+        String visible = TaskService.TASK_VISIBILITY_OWNER;
+        if (ps.Visible_To_Delegates__c) visible += ';' + TaskService.TASK_VISIBILITY_DELEGATES;
+
+        task.Visible_For__c = visible;
+        return task;
     }
-    
-    public Task createCompleteYourProfileTask(Id ownerId, Id participantId, Id participantContactId){
+
+    public Task createCompleteYourProfileTask(Id ownerId, Id participantId, Id participantContactId) {
         return new Task(
                 OwnerId = ownerId,
                 Subject = TaskService.TASK_CODE_COMPLETE_YOUR_PROFILE,
@@ -140,37 +161,36 @@ public without sharing class TaskService {
                 Visible_For__c = TASK_VISIBILITY_OWNER
         );
     }
-    
-    private String getVisibilityFilter(){
+
+    private String getVisibilityFilter() {
         String role = ParticipantService.getParticipantState().isDelegate ? 'Delegates' : 'Owner';
         return ' AND Visible_For__c INCLUDES (\'' + role + '\') ';
     }
-    
-    public String getOpenTasksFilter(){
+
+    public String getOpenTasksFilter() {
         List<String> statusFilter = new List<String>{
                 TASK_STATUS_OPEN,
                 TASK_STATUS_IN_PROGRESS
         };
-        return ' Status IN (\'' + String.join(statusFilter, '\',\'') +  '\') ';
+        return ' Status IN (\'' + String.join(statusFilter, '\',\'') + '\') ';
     }
-    
-    public void completeCYPTaskForParticipant(){
+
+    public void completeCYPTaskForParticipant() {
         List<Task> tasks = getTasksCommon('Task_Code__c =\'' +
-                TASK_CODE_COMPLETE_YOUR_PROFILE +'\' AND ' + getOpenTasksFilter());
-        if(tasks.size() > 0){
+                TASK_CODE_COMPLETE_YOUR_PROFILE + '\' AND ' + getOpenTasksFilter());
+        if (tasks.size() > 0) {
             completeTask(tasks[0]);
             update tasks[0];
         }
     }
-    
-    private String getCompletedTasksFilter(){
+
+    private String getCompletedTasksFilter() {
         List<String> statusFilter = new List<String>{
                 TASK_STATUS_IGNORED,
                 TASK_STATUS_COMPLETED
         };
-        return ' Status IN (\'' + String.join(statusFilter, '\',\'') +  '\') ';
+        return ' Status IN (\'' + String.join(statusFilter, '\',\'') + '\') ';
     }
-
 
 
 }
